--- a/ui.html
+++ b/ui.html
@@ -1,23 +1,113 @@
-<h2>Rectangle Creator</h2>
-<p>Count: <input id="count" value="5"></p>
-<button id="create">Create</button>
-<button id="cancel">Cancel</button>
-<script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Figma-Storybook Sync</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+        h2 {
+            font-weight: 500;
+            color: #333;
+            text-align: center;
+        }
+        h3 {
+            font-weight: 500;
+            color: #333;
+            text-align: center;
+        }
+        button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #6200ea;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-weight: 500;
+            transition: background-color 0.3s;
+            margin-top: 20px;
+            text-align: center;
+        }
+        button:hover {
+            background-color: #3700b3;
+        }
+        #results {
+            margin-top: 20px;
+        }
+        .result-item {
+            padding: 15px;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            margin-bottom: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .result-item span {
+            font-size: 14px;
+            color: #333;
+        }
+        .result-item button {
+            padding: 8px 16px;
+            background-color: #6200ea;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-weight: 500;
+            transition: background-color 0.3s;
+        }
+        .result-item button:hover {
+            background-color: #3700b3;
+        }
+    </style>
+</head>
+<body>
+    <h2>Figma-Storybook Sync</h2>
+    <button id="fetch">Fetch Components</button>
+    <h3 id="missing-title" style="display: none;">Missing components in Storybook</h3>
+    <div id="results"></div>
+    <script>
+        document.getElementById('fetch').onclick = () => {
+            parent.postMessage({ pluginMessage: { type: 'fetch-components' } }, '*');
+        };
 
-document.getElementById('create').onclick = () => {
-  const textbox = document.getElementById('count');
-  const count = parseInt(textbox.value, 10);
-  parent.postMessage({ pluginMessage: { type: 'create-rectangles', count } }, '*')
-}
+        onmessage = (event) => {
+            const { type, components } = event.data.pluginMessage;
+            if (type === 'components') {
+                const resultsDiv = document.getElementById('results');
+                const missingTitle = document.getElementById('missing-title');
+                resultsDiv.innerHTML = '';
+                if (components.length > 0) {
+                    missingTitle.style.display = 'block';
+                } else {
+                    missingTitle.style.display = 'none';
+                }
+                components.forEach(component => {
+                  console.log(component)
+                    const div = document.createElement('div');
+                    div.className = 'result-item';
+                    div.innerHTML = `
+                    <span>${component.name}</span>
+                    <button id="${component.id}" onclick="handleComponentAction('${component.id}', '${component.name}')">Export & Generate Story</button>
+                    `;
+                    resultsDiv.appendChild(div);
+                });
+            }
+        };
 
-document.getElementById('cancel').onclick = () => {
-  parent.postMessage({ pluginMessage: { type: 'cancel' } }, '*')
-}
-
-onmessage = (event) => {
-  console.log("got this from the plugin code", event.data.pluginMessage)
-  document.getElementById("count").value = event.data.pluginMessage
-}
-
-
-</script>
+        function handleComponentAction(id, name) {
+            parent.postMessage({ pluginMessage: { type: 'component-action', nodeId: id, componentName: name } }, '*');
+        }
+    </script>
+</body>
+</html>
