feat: some final styling changes

--- a/ui.html
+++ b/ui.html
@@ -57,7 +57,7 @@
             color: #333;
         }
         .result-item button {
-            padding: 8px 16px;
+            display: flex;
             background-color: #6200ea;
             color: #fff;
             border: none;
@@ -65,6 +65,8 @@
             cursor: pointer;
             font-weight: 500;
             transition: background-color 0.3s;
+            margin-top: auto;
+            margin-bottom: auto;
         }
         .result-item button:hover {
             background-color: #3700b3;
